resolving spacing issues

--- a/src/components/Dashboard/ClubProvider/Registers/AddProductToPlanForm/styles.module.scss
+++ b/src/components/Dashboard/ClubProvider/Registers/AddProductToPlanForm/styles.module.scss
@@ -2,7 +2,7 @@
 
 .globalSection {
     @include flex-center;
-    align-items: start;
+    align-items: flex-start;
 }
 
 .leftSection {
